ieml/usl/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> proposition
Rule 1     proposition -> morpheme
Rule 2     proposition -> poly_morpheme
Rule 3     proposition -> lexeme
Rule 4     proposition -> word
Rule 5     literal_list -> literal_list LITERAL
Rule 6     literal_list -> LITERAL
Rule 7     morpheme -> MORPHEME
Rule 8     morpheme -> MORPHEME literal_list
Rule 9     morpheme_sum -> morpheme_sum morpheme
Rule 10    morpheme_sum -> morpheme
Rule 11    group -> GROUP_MULTIPLICITY LPAREN morpheme_sum RPAREN
Rule 12    group_list -> group group_list
Rule 13    group_list -> group
Rule 14    poly_morpheme -> morpheme_sum group_list
Rule 15    poly_morpheme -> morpheme_sum
Rule 16    poly_morpheme -> group_list
Rule 17    lexeme -> LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
Rule 18    lexeme -> LPAREN RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
Rule 19    lexeme -> LPAREN RPAREN LPAREN RPAREN LPAREN poly_morpheme RPAREN
Rule 20    lexeme -> LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
Rule 21    lexeme -> LPAREN RPAREN LPAREN poly_morpheme RPAREN
Rule 22    lexeme -> LPAREN poly_morpheme RPAREN
Rule 23    lexeme -> LPAREN RPAREN
Rule 24    positioned_lexeme -> morpheme_sum lexeme
Rule 25    positioned_lexeme -> lexeme
Rule 26    lexeme_list -> lexeme_list RCHEVRON EXCLAMATION_MARK positioned_lexeme
Rule 27    lexeme_list -> lexeme_list RCHEVRON positioned_lexeme
Rule 28    lexeme_list -> EXCLAMATION_MARK positioned_lexeme
Rule 29    lexeme_list -> positioned_lexeme
Rule 30    word -> LBRACKET OLD_MORPHEME_GRAMMATICAL_CLASS lexeme_list RBRACKET
Rule 31    word -> LBRACKET lexeme_list RBRACKET

Terminals, with rules where they appear

EXCLAMATION_MARK     : 26 28
GROUP_MULTIPLICITY   : 11
LBRACKET             : 30 31
LITERAL              : 5 6
LPAREN               : 11 17 17 17 18 18 18 19 19 19 20 20 21 21 22 23
MORPHEME             : 7 8
OLD_MORPHEME_GRAMMATICAL_CLASS : 30
RBRACKET             : 30 31
RCHEVRON             : 26 27
RPAREN               : 11 17 17 17 18 18 18 19 19 19 20 20 21 21 22 23
error                : 

Nonterminals, with rules where they appear

group                : 12 13
group_list           : 12 14 16
lexeme               : 3 24 25
lexeme_list          : 26 27 30 31
literal_list         : 5 8
morpheme             : 1 9 10
morpheme_sum         : 9 11 14 15 24
poly_morpheme        : 2 17 17 17 18 18 19 20 20 21 22
positioned_lexeme    : 26 27 28 29
proposition          : 0
word                 : 4

Parsing method: LALR

state 0

    (0) S' -> . proposition
    (1) proposition -> . morpheme
    (2) proposition -> . poly_morpheme
    (3) proposition -> . lexeme
    (4) proposition -> . word
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list
    (14) poly_morpheme -> . morpheme_sum group_list
    (15) poly_morpheme -> . morpheme_sum
    (16) poly_morpheme -> . group_list
    (17) lexeme -> . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (18) lexeme -> . LPAREN RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (19) lexeme -> . LPAREN RPAREN LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (20) lexeme -> . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (21) lexeme -> . LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (22) lexeme -> . LPAREN poly_morpheme RPAREN
    (23) lexeme -> . LPAREN RPAREN
    (30) word -> . LBRACKET OLD_MORPHEME_GRAMMATICAL_CLASS lexeme_list RBRACKET
    (31) word -> . LBRACKET lexeme_list RBRACKET
    (9) morpheme_sum -> . morpheme_sum morpheme
    (10) morpheme_sum -> . morpheme
    (12) group_list -> . group group_list
    (13) group_list -> . group
    (11) group -> . GROUP_MULTIPLICITY LPAREN morpheme_sum RPAREN

    MORPHEME        shift and go to state 6
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 10
    GROUP_MULTIPLICITY shift and go to state 12

    proposition                    shift and go to state 1
    morpheme                       shift and go to state 2
    poly_morpheme                  shift and go to state 3
    lexeme                         shift and go to state 4
    word                           shift and go to state 5
    morpheme_sum                   shift and go to state 7
    group_list                     shift and go to state 8
    group                          shift and go to state 11

state 1

    (0) S' -> proposition .



state 2

    (1) proposition -> morpheme .
    (10) morpheme_sum -> morpheme .

  ! reduce/reduce conflict for $end resolved using rule 1 (proposition -> morpheme .)
    $end            reduce using rule 1 (proposition -> morpheme .)
    MORPHEME        reduce using rule 10 (morpheme_sum -> morpheme .)
    GROUP_MULTIPLICITY reduce using rule 10 (morpheme_sum -> morpheme .)

  ! $end            [ reduce using rule 10 (morpheme_sum -> morpheme .) ]


state 3

    (2) proposition -> poly_morpheme .

    $end            reduce using rule 2 (proposition -> poly_morpheme .)


state 4

    (3) proposition -> lexeme .

    $end            reduce using rule 3 (proposition -> lexeme .)


state 5

    (4) proposition -> word .

    $end            reduce using rule 4 (proposition -> word .)


state 6

    (7) morpheme -> MORPHEME .
    (8) morpheme -> MORPHEME . literal_list
    (5) literal_list -> . literal_list LITERAL
    (6) literal_list -> . LITERAL

    $end            reduce using rule 7 (morpheme -> MORPHEME .)
    MORPHEME        reduce using rule 7 (morpheme -> MORPHEME .)
    GROUP_MULTIPLICITY reduce using rule 7 (morpheme -> MORPHEME .)
    RPAREN          reduce using rule 7 (morpheme -> MORPHEME .)
    LPAREN          reduce using rule 7 (morpheme -> MORPHEME .)
    LITERAL         shift and go to state 14

    literal_list                   shift and go to state 13

state 7

    (14) poly_morpheme -> morpheme_sum . group_list
    (15) poly_morpheme -> morpheme_sum .
    (9) morpheme_sum -> morpheme_sum . morpheme
    (12) group_list -> . group group_list
    (13) group_list -> . group
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list
    (11) group -> . GROUP_MULTIPLICITY LPAREN morpheme_sum RPAREN

    $end            reduce using rule 15 (poly_morpheme -> morpheme_sum .)
    RPAREN          reduce using rule 15 (poly_morpheme -> morpheme_sum .)
    MORPHEME        shift and go to state 6
    GROUP_MULTIPLICITY shift and go to state 12

    group_list                     shift and go to state 15
    morpheme                       shift and go to state 16
    group                          shift and go to state 11

state 8

    (16) poly_morpheme -> group_list .

    $end            reduce using rule 16 (poly_morpheme -> group_list .)
    RPAREN          reduce using rule 16 (poly_morpheme -> group_list .)


state 9

    (17) lexeme -> LPAREN . poly_morpheme RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (18) lexeme -> LPAREN . RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (19) lexeme -> LPAREN . RPAREN LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (20) lexeme -> LPAREN . poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (21) lexeme -> LPAREN . RPAREN LPAREN poly_morpheme RPAREN
    (22) lexeme -> LPAREN . poly_morpheme RPAREN
    (23) lexeme -> LPAREN . RPAREN
    (14) poly_morpheme -> . morpheme_sum group_list
    (15) poly_morpheme -> . morpheme_sum
    (16) poly_morpheme -> . group_list
    (9) morpheme_sum -> . morpheme_sum morpheme
    (10) morpheme_sum -> . morpheme
    (12) group_list -> . group group_list
    (13) group_list -> . group
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list
    (11) group -> . GROUP_MULTIPLICITY LPAREN morpheme_sum RPAREN

    RPAREN          shift and go to state 18
    MORPHEME        shift and go to state 6
    GROUP_MULTIPLICITY shift and go to state 12

    poly_morpheme                  shift and go to state 17
    morpheme_sum                   shift and go to state 7
    group_list                     shift and go to state 8
    morpheme                       shift and go to state 19
    group                          shift and go to state 11

state 10

    (30) word -> LBRACKET . OLD_MORPHEME_GRAMMATICAL_CLASS lexeme_list RBRACKET
    (31) word -> LBRACKET . lexeme_list RBRACKET
    (26) lexeme_list -> . lexeme_list RCHEVRON EXCLAMATION_MARK positioned_lexeme
    (27) lexeme_list -> . lexeme_list RCHEVRON positioned_lexeme
    (28) lexeme_list -> . EXCLAMATION_MARK positioned_lexeme
    (29) lexeme_list -> . positioned_lexeme
    (24) positioned_lexeme -> . morpheme_sum lexeme
    (25) positioned_lexeme -> . lexeme
    (9) morpheme_sum -> . morpheme_sum morpheme
    (10) morpheme_sum -> . morpheme
    (17) lexeme -> . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (18) lexeme -> . LPAREN RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (19) lexeme -> . LPAREN RPAREN LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (20) lexeme -> . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (21) lexeme -> . LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (22) lexeme -> . LPAREN poly_morpheme RPAREN
    (23) lexeme -> . LPAREN RPAREN
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list

    OLD_MORPHEME_GRAMMATICAL_CLASS shift and go to state 20
    EXCLAMATION_MARK shift and go to state 22
    LPAREN          shift and go to state 9
    MORPHEME        shift and go to state 6

    lexeme_list                    shift and go to state 21
    positioned_lexeme              shift and go to state 23
    morpheme_sum                   shift and go to state 24
    lexeme                         shift and go to state 25
    morpheme                       shift and go to state 19

state 11

    (12) group_list -> group . group_list
    (13) group_list -> group .
    (12) group_list -> . group group_list
    (13) group_list -> . group
    (11) group -> . GROUP_MULTIPLICITY LPAREN morpheme_sum RPAREN

    $end            reduce using rule 13 (group_list -> group .)
    RPAREN          reduce using rule 13 (group_list -> group .)
    GROUP_MULTIPLICITY shift and go to state 12

    group                          shift and go to state 11
    group_list                     shift and go to state 26

state 12

    (11) group -> GROUP_MULTIPLICITY . LPAREN morpheme_sum RPAREN

    LPAREN          shift and go to state 27


state 13

    (8) morpheme -> MORPHEME literal_list .
    (5) literal_list -> literal_list . LITERAL

    $end            reduce using rule 8 (morpheme -> MORPHEME literal_list .)
    MORPHEME        reduce using rule 8 (morpheme -> MORPHEME literal_list .)
    GROUP_MULTIPLICITY reduce using rule 8 (morpheme -> MORPHEME literal_list .)
    RPAREN          reduce using rule 8 (morpheme -> MORPHEME literal_list .)
    LPAREN          reduce using rule 8 (morpheme -> MORPHEME literal_list .)
    LITERAL         shift and go to state 28


state 14

    (6) literal_list -> LITERAL .

    LITERAL         reduce using rule 6 (literal_list -> LITERAL .)
    $end            reduce using rule 6 (literal_list -> LITERAL .)
    MORPHEME        reduce using rule 6 (literal_list -> LITERAL .)
    GROUP_MULTIPLICITY reduce using rule 6 (literal_list -> LITERAL .)
    RPAREN          reduce using rule 6 (literal_list -> LITERAL .)
    LPAREN          reduce using rule 6 (literal_list -> LITERAL .)


state 15

    (14) poly_morpheme -> morpheme_sum group_list .

    $end            reduce using rule 14 (poly_morpheme -> morpheme_sum group_list .)
    RPAREN          reduce using rule 14 (poly_morpheme -> morpheme_sum group_list .)


state 16

    (9) morpheme_sum -> morpheme_sum morpheme .

    MORPHEME        reduce using rule 9 (morpheme_sum -> morpheme_sum morpheme .)
    GROUP_MULTIPLICITY reduce using rule 9 (morpheme_sum -> morpheme_sum morpheme .)
    $end            reduce using rule 9 (morpheme_sum -> morpheme_sum morpheme .)
    RPAREN          reduce using rule 9 (morpheme_sum -> morpheme_sum morpheme .)
    LPAREN          reduce using rule 9 (morpheme_sum -> morpheme_sum morpheme .)


state 17

    (17) lexeme -> LPAREN poly_morpheme . RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (20) lexeme -> LPAREN poly_morpheme . RPAREN LPAREN poly_morpheme RPAREN
    (22) lexeme -> LPAREN poly_morpheme . RPAREN

    RPAREN          shift and go to state 29


state 18

    (18) lexeme -> LPAREN RPAREN . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (19) lexeme -> LPAREN RPAREN . LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (21) lexeme -> LPAREN RPAREN . LPAREN poly_morpheme RPAREN
    (23) lexeme -> LPAREN RPAREN .

    LPAREN          shift and go to state 30
    $end            reduce using rule 23 (lexeme -> LPAREN RPAREN .)
    RBRACKET        reduce using rule 23 (lexeme -> LPAREN RPAREN .)
    RCHEVRON        reduce using rule 23 (lexeme -> LPAREN RPAREN .)


state 19

    (10) morpheme_sum -> morpheme .

    MORPHEME        reduce using rule 10 (morpheme_sum -> morpheme .)
    GROUP_MULTIPLICITY reduce using rule 10 (morpheme_sum -> morpheme .)
    RPAREN          reduce using rule 10 (morpheme_sum -> morpheme .)
    LPAREN          reduce using rule 10 (morpheme_sum -> morpheme .)


state 20

    (30) word -> LBRACKET OLD_MORPHEME_GRAMMATICAL_CLASS . lexeme_list RBRACKET
    (26) lexeme_list -> . lexeme_list RCHEVRON EXCLAMATION_MARK positioned_lexeme
    (27) lexeme_list -> . lexeme_list RCHEVRON positioned_lexeme
    (28) lexeme_list -> . EXCLAMATION_MARK positioned_lexeme
    (29) lexeme_list -> . positioned_lexeme
    (24) positioned_lexeme -> . morpheme_sum lexeme
    (25) positioned_lexeme -> . lexeme
    (9) morpheme_sum -> . morpheme_sum morpheme
    (10) morpheme_sum -> . morpheme
    (17) lexeme -> . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (18) lexeme -> . LPAREN RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (19) lexeme -> . LPAREN RPAREN LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (20) lexeme -> . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (21) lexeme -> . LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (22) lexeme -> . LPAREN poly_morpheme RPAREN
    (23) lexeme -> . LPAREN RPAREN
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list

    EXCLAMATION_MARK shift and go to state 22
    LPAREN          shift and go to state 9
    MORPHEME        shift and go to state 6

    lexeme_list                    shift and go to state 31
    positioned_lexeme              shift and go to state 23
    morpheme_sum                   shift and go to state 24
    lexeme                         shift and go to state 25
    morpheme                       shift and go to state 19

state 21

    (31) word -> LBRACKET lexeme_list . RBRACKET
    (26) lexeme_list -> lexeme_list . RCHEVRON EXCLAMATION_MARK positioned_lexeme
    (27) lexeme_list -> lexeme_list . RCHEVRON positioned_lexeme

    RBRACKET        shift and go to state 32
    RCHEVRON        shift and go to state 33


state 22

    (28) lexeme_list -> EXCLAMATION_MARK . positioned_lexeme
    (24) positioned_lexeme -> . morpheme_sum lexeme
    (25) positioned_lexeme -> . lexeme
    (9) morpheme_sum -> . morpheme_sum morpheme
    (10) morpheme_sum -> . morpheme
    (17) lexeme -> . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (18) lexeme -> . LPAREN RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (19) lexeme -> . LPAREN RPAREN LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (20) lexeme -> . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (21) lexeme -> . LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (22) lexeme -> . LPAREN poly_morpheme RPAREN
    (23) lexeme -> . LPAREN RPAREN
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list

    LPAREN          shift and go to state 9
    MORPHEME        shift and go to state 6

    positioned_lexeme              shift and go to state 34
    morpheme_sum                   shift and go to state 24
    lexeme                         shift and go to state 25
    morpheme                       shift and go to state 19

state 23

    (29) lexeme_list -> positioned_lexeme .

    RBRACKET        reduce using rule 29 (lexeme_list -> positioned_lexeme .)
    RCHEVRON        reduce using rule 29 (lexeme_list -> positioned_lexeme .)


state 24

    (24) positioned_lexeme -> morpheme_sum . lexeme
    (9) morpheme_sum -> morpheme_sum . morpheme
    (17) lexeme -> . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (18) lexeme -> . LPAREN RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (19) lexeme -> . LPAREN RPAREN LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (20) lexeme -> . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (21) lexeme -> . LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (22) lexeme -> . LPAREN poly_morpheme RPAREN
    (23) lexeme -> . LPAREN RPAREN
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list

    LPAREN          shift and go to state 9
    MORPHEME        shift and go to state 6

    lexeme                         shift and go to state 35
    morpheme                       shift and go to state 16

state 25

    (25) positioned_lexeme -> lexeme .

    RBRACKET        reduce using rule 25 (positioned_lexeme -> lexeme .)
    RCHEVRON        reduce using rule 25 (positioned_lexeme -> lexeme .)


state 26

    (12) group_list -> group group_list .

    $end            reduce using rule 12 (group_list -> group group_list .)
    RPAREN          reduce using rule 12 (group_list -> group group_list .)


state 27

    (11) group -> GROUP_MULTIPLICITY LPAREN . morpheme_sum RPAREN
    (9) morpheme_sum -> . morpheme_sum morpheme
    (10) morpheme_sum -> . morpheme
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list

    MORPHEME        shift and go to state 6

    morpheme_sum                   shift and go to state 36
    morpheme                       shift and go to state 19

state 28

    (5) literal_list -> literal_list LITERAL .

    LITERAL         reduce using rule 5 (literal_list -> literal_list LITERAL .)
    $end            reduce using rule 5 (literal_list -> literal_list LITERAL .)
    MORPHEME        reduce using rule 5 (literal_list -> literal_list LITERAL .)
    GROUP_MULTIPLICITY reduce using rule 5 (literal_list -> literal_list LITERAL .)
    RPAREN          reduce using rule 5 (literal_list -> literal_list LITERAL .)
    LPAREN          reduce using rule 5 (literal_list -> literal_list LITERAL .)


state 29

    (17) lexeme -> LPAREN poly_morpheme RPAREN . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (20) lexeme -> LPAREN poly_morpheme RPAREN . LPAREN poly_morpheme RPAREN
    (22) lexeme -> LPAREN poly_morpheme RPAREN .

    LPAREN          shift and go to state 37
    $end            reduce using rule 22 (lexeme -> LPAREN poly_morpheme RPAREN .)
    RBRACKET        reduce using rule 22 (lexeme -> LPAREN poly_morpheme RPAREN .)
    RCHEVRON        reduce using rule 22 (lexeme -> LPAREN poly_morpheme RPAREN .)


state 30

    (18) lexeme -> LPAREN RPAREN LPAREN . poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (19) lexeme -> LPAREN RPAREN LPAREN . RPAREN LPAREN poly_morpheme RPAREN
    (21) lexeme -> LPAREN RPAREN LPAREN . poly_morpheme RPAREN
    (14) poly_morpheme -> . morpheme_sum group_list
    (15) poly_morpheme -> . morpheme_sum
    (16) poly_morpheme -> . group_list
    (9) morpheme_sum -> . morpheme_sum morpheme
    (10) morpheme_sum -> . morpheme
    (12) group_list -> . group group_list
    (13) group_list -> . group
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list
    (11) group -> . GROUP_MULTIPLICITY LPAREN morpheme_sum RPAREN

    RPAREN          shift and go to state 38
    MORPHEME        shift and go to state 6
    GROUP_MULTIPLICITY shift and go to state 12

    poly_morpheme                  shift and go to state 39
    morpheme_sum                   shift and go to state 7
    group_list                     shift and go to state 8
    morpheme                       shift and go to state 19
    group                          shift and go to state 11

state 31

    (30) word -> LBRACKET OLD_MORPHEME_GRAMMATICAL_CLASS lexeme_list . RBRACKET
    (26) lexeme_list -> lexeme_list . RCHEVRON EXCLAMATION_MARK positioned_lexeme
    (27) lexeme_list -> lexeme_list . RCHEVRON positioned_lexeme

    RBRACKET        shift and go to state 40
    RCHEVRON        shift and go to state 33


state 32

    (31) word -> LBRACKET lexeme_list RBRACKET .

    $end            reduce using rule 31 (word -> LBRACKET lexeme_list RBRACKET .)


state 33

    (26) lexeme_list -> lexeme_list RCHEVRON . EXCLAMATION_MARK positioned_lexeme
    (27) lexeme_list -> lexeme_list RCHEVRON . positioned_lexeme
    (24) positioned_lexeme -> . morpheme_sum lexeme
    (25) positioned_lexeme -> . lexeme
    (9) morpheme_sum -> . morpheme_sum morpheme
    (10) morpheme_sum -> . morpheme
    (17) lexeme -> . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (18) lexeme -> . LPAREN RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (19) lexeme -> . LPAREN RPAREN LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (20) lexeme -> . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (21) lexeme -> . LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (22) lexeme -> . LPAREN poly_morpheme RPAREN
    (23) lexeme -> . LPAREN RPAREN
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list

    EXCLAMATION_MARK shift and go to state 41
    LPAREN          shift and go to state 9
    MORPHEME        shift and go to state 6

    positioned_lexeme              shift and go to state 42
    morpheme_sum                   shift and go to state 24
    lexeme                         shift and go to state 25
    morpheme                       shift and go to state 19

state 34

    (28) lexeme_list -> EXCLAMATION_MARK positioned_lexeme .

    RBRACKET        reduce using rule 28 (lexeme_list -> EXCLAMATION_MARK positioned_lexeme .)
    RCHEVRON        reduce using rule 28 (lexeme_list -> EXCLAMATION_MARK positioned_lexeme .)


state 35

    (24) positioned_lexeme -> morpheme_sum lexeme .

    RBRACKET        reduce using rule 24 (positioned_lexeme -> morpheme_sum lexeme .)
    RCHEVRON        reduce using rule 24 (positioned_lexeme -> morpheme_sum lexeme .)


state 36

    (11) group -> GROUP_MULTIPLICITY LPAREN morpheme_sum . RPAREN
    (9) morpheme_sum -> morpheme_sum . morpheme
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list

    RPAREN          shift and go to state 43
    MORPHEME        shift and go to state 6

    morpheme                       shift and go to state 16

state 37

    (17) lexeme -> LPAREN poly_morpheme RPAREN LPAREN . poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (20) lexeme -> LPAREN poly_morpheme RPAREN LPAREN . poly_morpheme RPAREN
    (14) poly_morpheme -> . morpheme_sum group_list
    (15) poly_morpheme -> . morpheme_sum
    (16) poly_morpheme -> . group_list
    (9) morpheme_sum -> . morpheme_sum morpheme
    (10) morpheme_sum -> . morpheme
    (12) group_list -> . group group_list
    (13) group_list -> . group
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list
    (11) group -> . GROUP_MULTIPLICITY LPAREN morpheme_sum RPAREN

    MORPHEME        shift and go to state 6
    GROUP_MULTIPLICITY shift and go to state 12

    poly_morpheme                  shift and go to state 44
    morpheme_sum                   shift and go to state 7
    group_list                     shift and go to state 8
    morpheme                       shift and go to state 19
    group                          shift and go to state 11

state 38

    (19) lexeme -> LPAREN RPAREN LPAREN RPAREN . LPAREN poly_morpheme RPAREN

    LPAREN          shift and go to state 45


state 39

    (18) lexeme -> LPAREN RPAREN LPAREN poly_morpheme . RPAREN LPAREN poly_morpheme RPAREN
    (21) lexeme -> LPAREN RPAREN LPAREN poly_morpheme . RPAREN

    RPAREN          shift and go to state 46


state 40

    (30) word -> LBRACKET OLD_MORPHEME_GRAMMATICAL_CLASS lexeme_list RBRACKET .

    $end            reduce using rule 30 (word -> LBRACKET OLD_MORPHEME_GRAMMATICAL_CLASS lexeme_list RBRACKET .)


state 41

    (26) lexeme_list -> lexeme_list RCHEVRON EXCLAMATION_MARK . positioned_lexeme
    (24) positioned_lexeme -> . morpheme_sum lexeme
    (25) positioned_lexeme -> . lexeme
    (9) morpheme_sum -> . morpheme_sum morpheme
    (10) morpheme_sum -> . morpheme
    (17) lexeme -> . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (18) lexeme -> . LPAREN RPAREN LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (19) lexeme -> . LPAREN RPAREN LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (20) lexeme -> . LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN
    (21) lexeme -> . LPAREN RPAREN LPAREN poly_morpheme RPAREN
    (22) lexeme -> . LPAREN poly_morpheme RPAREN
    (23) lexeme -> . LPAREN RPAREN
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list

    LPAREN          shift and go to state 9
    MORPHEME        shift and go to state 6

    positioned_lexeme              shift and go to state 47
    morpheme_sum                   shift and go to state 24
    lexeme                         shift and go to state 25
    morpheme                       shift and go to state 19

state 42

    (27) lexeme_list -> lexeme_list RCHEVRON positioned_lexeme .

    RBRACKET        reduce using rule 27 (lexeme_list -> lexeme_list RCHEVRON positioned_lexeme .)
    RCHEVRON        reduce using rule 27 (lexeme_list -> lexeme_list RCHEVRON positioned_lexeme .)


state 43

    (11) group -> GROUP_MULTIPLICITY LPAREN morpheme_sum RPAREN .

    GROUP_MULTIPLICITY reduce using rule 11 (group -> GROUP_MULTIPLICITY LPAREN morpheme_sum RPAREN .)
    $end            reduce using rule 11 (group -> GROUP_MULTIPLICITY LPAREN morpheme_sum RPAREN .)
    RPAREN          reduce using rule 11 (group -> GROUP_MULTIPLICITY LPAREN morpheme_sum RPAREN .)


state 44

    (17) lexeme -> LPAREN poly_morpheme RPAREN LPAREN poly_morpheme . RPAREN LPAREN poly_morpheme RPAREN
    (20) lexeme -> LPAREN poly_morpheme RPAREN LPAREN poly_morpheme . RPAREN

    RPAREN          shift and go to state 48


state 45

    (19) lexeme -> LPAREN RPAREN LPAREN RPAREN LPAREN . poly_morpheme RPAREN
    (14) poly_morpheme -> . morpheme_sum group_list
    (15) poly_morpheme -> . morpheme_sum
    (16) poly_morpheme -> . group_list
    (9) morpheme_sum -> . morpheme_sum morpheme
    (10) morpheme_sum -> . morpheme
    (12) group_list -> . group group_list
    (13) group_list -> . group
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list
    (11) group -> . GROUP_MULTIPLICITY LPAREN morpheme_sum RPAREN

    MORPHEME        shift and go to state 6
    GROUP_MULTIPLICITY shift and go to state 12

    poly_morpheme                  shift and go to state 49
    morpheme_sum                   shift and go to state 7
    group_list                     shift and go to state 8
    morpheme                       shift and go to state 19
    group                          shift and go to state 11

state 46

    (18) lexeme -> LPAREN RPAREN LPAREN poly_morpheme RPAREN . LPAREN poly_morpheme RPAREN
    (21) lexeme -> LPAREN RPAREN LPAREN poly_morpheme RPAREN .

    LPAREN          shift and go to state 50
    $end            reduce using rule 21 (lexeme -> LPAREN RPAREN LPAREN poly_morpheme RPAREN .)
    RBRACKET        reduce using rule 21 (lexeme -> LPAREN RPAREN LPAREN poly_morpheme RPAREN .)
    RCHEVRON        reduce using rule 21 (lexeme -> LPAREN RPAREN LPAREN poly_morpheme RPAREN .)


state 47

    (26) lexeme_list -> lexeme_list RCHEVRON EXCLAMATION_MARK positioned_lexeme .

    RBRACKET        reduce using rule 26 (lexeme_list -> lexeme_list RCHEVRON EXCLAMATION_MARK positioned_lexeme .)
    RCHEVRON        reduce using rule 26 (lexeme_list -> lexeme_list RCHEVRON EXCLAMATION_MARK positioned_lexeme .)


state 48

    (17) lexeme -> LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN . LPAREN poly_morpheme RPAREN
    (20) lexeme -> LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN .

    LPAREN          shift and go to state 51
    $end            reduce using rule 20 (lexeme -> LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN .)
    RBRACKET        reduce using rule 20 (lexeme -> LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN .)
    RCHEVRON        reduce using rule 20 (lexeme -> LPAREN poly_morpheme RPAREN LPAREN poly_morpheme RPAREN .)


state 49

    (19) lexeme -> LPAREN RPAREN LPAREN RPAREN LPAREN poly_morpheme . RPAREN

    RPAREN          shift and go to state 52


state 50

    (18) lexeme -> LPAREN RPAREN LPAREN poly_morpheme RPAREN LPAREN . poly_morpheme RPAREN
    (14) poly_morpheme -> . morpheme_sum group_list
    (15) poly_morpheme -> . morpheme_sum
    (16) poly_morpheme -> . group_list
    (9) morpheme_sum -> . morpheme_sum morpheme
    (10) morpheme_sum -> . morpheme
    (12) group_list -> . group group_list
    (13) group_list -> . group
    (7) morpheme -> . MORPHEME
    (8) morpheme -> . MORPHEME literal_list
    (11) group -> . GROUP_MULTIPLICITY LPAREN morpheme_sum RPAREN

    MORPHEME        shift and go to state 6
    GROUP_MULTIPLICITY shift and go to state 12
